--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,34 @@
-.biography{
-    background-color: bisque;
+.container-banner {
+  font-size: medium;
+  margin: 80px;
+  font-style: italic;
+  font-weight: 700;
+}
 
+.vampirediaries {
+  display: inline flex;
+  padding: 0px;
+  margin: 0px;
+}
+
+.cars {
+  display: inline flex;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+.menu nav ul {
+  display: flex;
+  justify-content: space-between;
+}
+body{
+background-color: hsl(340, 57%, 64%);
+
+margin: 30px;
 
 
 }
+
+
