--- a/css/styles.css
+++ b/css/styles.css
@@ -24,11 +24,13 @@ h1 {
   justify-content: space-between;
 }
 body{
-background-color: hsl(340, 57%, 64%);
-
-margin: 30px;
+background-color: brown;
 
 
+}
+.copy{
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
