--- a/css/styles.css
+++ b/css/styles.css
@@ -9,14 +9,20 @@
   display: inline flex;
   padding: 0px;
   margin: 0px;
+  width: 1000px;
+  height: 100;
+
 }
 
 .cars {
   display: inline flex;
-  padding: 20px;
+  padding: 40px;
+  width: 40px;
+  margin: 0px;
+  
 }
 
-h1 {
+h2 {
   text-align: center;
 }
 .menu nav ul {
@@ -24,7 +30,7 @@ h1 {
   justify-content: space-between;
 }
 body{
-background-color: brown;
+background-color: plum;
 
 
 }
